--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,3 +49,7 @@ repos:
         additional_dependencies:
           # Type stubs
           - pytest
+          - distributed>=2023.2.0
+          - opentelemetry-api>=1.16.0
+          - opentelemetry-sdk>=1.16.0
+          - opentelemetry-semantic-conventions>=0.37b0
