--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,11 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
+  "distributed>=2023.2.0",
   "opentelemetry-api>=1.16.0",
+  "opentelemetry-sdk>=1.16.0",
+  "opentelemetry-semantic-conventions>=0.37b0",
+
 ]
 dynamic = ["version"]
 
@@ -62,3 +66,6 @@ exclude_lines = [
   "if __name__ == .__main__.:",
   "if TYPE_CHECKING:",
 ]
+
+[tool.isort]
+profile = "black"
